2005-03-07  Marek Safar  <marek.safar@seznam.cz>

	* cs-tokenizer.cs (xtoken): Add CS1035.
	
	* class.cs (MethodData.Define): Add CS0683.
	(FieldMember.ctor): Add CS0681.

2005-03-07  Raja R Harinath  <rharinath@novell.com>

	* ecore.cs (SimpleName.DoResolve): Rename from
	SimpleName.DoResolveAllowStatic.
	(SimpleName.DoSimpleNameResolve): Remove 'allow_static' argument.
	Pass 'intermediate' flag to MemberStaticCheck.
	(SimpleName.MemberStaticCheck): Skip "static check" only in case
	of "intermediate" lookups via MemberAccess.
	(SimpleName.IdenticalNameAndTypeName): New.  Carved out of ...
	* expression.cs (MemberAccess.IdenticalNameAndTypeName): ... this.

2005-03-07  Raja R Harinath  <rharinath@novell.com>

	Fix #73394.
	* ecore.cs (FieldExpr.EmitInstance): Catch cases of CS0120 that
	slipped in because of variable names that are identical to a
	builtin type's BCL equivalent ('string String;', 'int Int32;').
	(PropertyExpr.EmitInstance): Likewise.

2005-03-04  Marek Safar  <marek.safar@seznam.cz>

	* cs-tokenizer.cs (PreProcessPragma): Add warning 1633, 1635.
	
	* report.cs (warning_ignore_table): Made public.

2005-03-04  Raja R Harinath  <rharinath@novell.com>

	Fix #73282.
	* class.cs (MethodData.Emit): Pass 'container' to
	container.GetObsoleteAttribute instead of 'container.Parent'.

2005-03-03  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Add 1534 error test.

	* iterators.cs (Yield.CheckContext): Add error 1629.
	(Iterator.ctor): Save unsafe modifier.
	(MoveNextMethod.DoEmit): Restore unsafe context.

	* namespace.cs (UsingAlias): Better error message.

2005-03-03  Dan Winship  <danw@novell.com>

	* convert.cs (Error_CannotImplicitConversion): fix two bugs in
	the warning message [#73219]

2005-03-03  Raja R Harinath  <rharinath@novell.com>

	Fix compile with MCS 1.0.0.0.
	* cs-tokenizer.cs (PreProcessPragma): Simplify w_disable and
	w_restore to not depend on string constant folding.

2005-03-03  Raja R Harinath  <rharinath@novell.com>
