@@ -172,6 +172,9 @@ namespace Mono.CSharp {
 			catch (System.IO.IOException io) {
 				Report.Error (16, "Could not write to file `"+name+"', cause: " + io.Message);
 			}
+			catch (System.UnauthorizedAccessException ua) {
+				Report.Error (16, "Could not write to file `"+name+"', cause: " + ua.Message);
+			}
 
 			if (SymbolWriter != null)
 				SymbolWriter.WriteSymbolFile ();
