@@ -1,3 +1,8 @@
+2005-03-07  Duncan Mak  <duncan@novell.com>
+
+	* codegen.cs (Save):  Catch UnauthorizedAccessException as
+	well. Fixes bug #73454.
+
 2005-03-07  Marek Safar  <marek.safar@seznam.cz>
 
 	* cs-tokenizer.cs (xtoken): Add CS1035.
